// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`routeLadder displays loading if we are fetching the timepoints 1`] = `
Array [
  <div
    className="m-route-ladder__header"
  >
    <button
      className="m-close-button"
      onClick={[Function]}
    >
      <span
        className=""
        dangerouslySetInnerHTML={
          Object {
            "__html": "SVG",
          }
        }
      />
    </button>
    <div
      className="m-route-ladder__route-name"
    >
      28
    </div>
  </div>,
  <div
    className="m-route-ladder__controls"
  >
    <button
      className="m-route-ladder__reverse"
      onClick={[Function]}
    >
      <span
        className="m-route-ladder__reverse-icon"
        dangerouslySetInnerHTML={
          Object {
            "__html": "SVG",
          }
        }
      />
      Reverse
    </button>
  </div>,
  "loading...",
]
`;

exports[`routeLadder renders a route ladder 1`] = `
Array [
  <div
    className="m-route-ladder__header"
  >
    <button
      className="m-close-button"
      onClick={[Function]}
    >
      <span
        className=""
        dangerouslySetInnerHTML={
          Object {
            "__html": "SVG",
          }
        }
      />
    </button>
    <div
      className="m-route-ladder__route-name"
    >
      28
    </div>
  </div>,
  <div
    className="m-route-ladder__controls"
  >
    <button
      className="m-route-ladder__reverse"
      onClick={[Function]}
    >
      <span
        className="m-route-ladder__reverse-icon"
        dangerouslySetInnerHTML={
          Object {
            "__html": "SVG",
          }
        }
      />
      Reverse
    </button>
  </div>,
  <div
    className="m-ladder"
  >
    <svg>
      <line
        className="m-ladder__line"
        x1={-40}
        x2={-40}
        y1="0"
        y2={420}
      />
      <line
        className="m-ladder__line"
        x1={40}
        x2={40}
        y1="0"
        y2={420}
      />
      <circle
        className="m-ladder__stop-circle"
        cx={-40}
        cy={0}
        r="3"
      />
      <circle
        className="m-ladder__stop-circle"
        cx={40}
        cy={0}
        r="3"
      />
      <text
        className="m-ladder__timepoint-name"
        dominantBaseline="middle"
        textAnchor="middle"
        x="0"
        y={0}
      >
        MATPN
      </text>
      <circle
        className="m-ladder__stop-circle"
        cx={-40}
        cy={210}
        r="3"
      />
      <circle
        className="m-ladder__stop-circle"
        cx={40}
        cy={210}
        r="3"
      />
      <text
        className="m-ladder__timepoint-name"
        dominantBaseline="middle"
        textAnchor="middle"
        x="0"
        y={210}
      >
        WELLH
      </text>
      <circle
        className="m-ladder__stop-circle"
        cx={-40}
        cy={420}
        r="3"
      />
      <circle
        className="m-ladder__stop-circle"
        cx={40}
        cy={420}
        r="3"
      />
      <text
        className="m-ladder__timepoint-name"
        dominantBaseline="middle"
        textAnchor="middle"
        x="0"
        y={420}
      >
        MORTN
      </text>
    </svg>
  </div>,
  <div
    className="m-incoming-box"
  />,
]
`;

exports[`routeLadder renders a route ladder with vehicles 1`] = `
Array [
  <div
    className="m-route-ladder__header"
  >
    <button
      className="m-close-button"
      onClick={[Function]}
    >
      <span
        className=""
        dangerouslySetInnerHTML={
          Object {
            "__html": "SVG",
          }
        }
      />
    </button>
    <div
      className="m-route-ladder__route-name"
    >
      28
    </div>
  </div>,
  <div
    className="m-route-ladder__controls"
  >
    <button
      className="m-route-ladder__reverse"
      onClick={[Function]}
    >
      <span
        className="m-route-ladder__reverse-icon"
        dangerouslySetInnerHTML={
          Object {
            "__html": "SVG",
          }
        }
      />
      Reverse
    </button>
  </div>,
  <div
    className="m-ladder"
  >
    <svg>
      0
      <g>
        <line
          className="m-ladder__scheduled-line on-time"
          x1={-63}
          x2={-40}
          y1={420}
          y2={420}
        />
      </g>
      <g>
        <g
          className="m-ladder__vehicle on-time "
          onClick={[Function]}
          transform="translate(63,105)"
        >
          <g
            className="m-vehicle-icon m-vehicle-icon--medium"
          >
            <rect
              className="m-vehicle-icon__label-background"
              height={11}
              rx={5.5}
              ry={5.5}
              width={26}
              x={-13}
              y={11.5}
            />
            <text
              className="m-vehicle-icon__label"
              dominantBaseline="central"
              textAnchor="middle"
              x="0"
              y={17}
            >
              1818
            </text>
            <path
              className="m-vehicle-icon__triangle"
              d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
              transform="scale(0.625) rotate(0) translate(-24,-22)"
            />
            <text
              className="m-vehicle-icon__variant"
              dominantBaseline="alphabetic"
              textAnchor="middle"
              x={0}
              y={8.5}
            >
              4
            </text>
          </g>
        </g>
      </g>
      <g>
        <g
          className="m-ladder__vehicle on-time "
          onClick={[Function]}
          transform="translate(-63,420)"
        >
          <g
            className="m-vehicle-icon m-vehicle-icon--medium"
          >
            <rect
              className="m-vehicle-icon__label-background"
              height={11}
              rx={5.5}
              ry={5.5}
              width={26}
              x={-13}
              y={-22.5}
            />
            <text
              className="m-vehicle-icon__label"
              dominantBaseline="central"
              textAnchor="middle"
              x="0"
              y={-17}
            >
              0479
            </text>
            <path
              className="m-vehicle-icon__triangle"
              d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
              transform="scale(0.625) rotate(180) translate(-24,-22)"
            />
          </g>
        </g>
      </g>
      <line
        className="m-ladder__line"
        x1={-40}
        x2={-40}
        y1="0"
        y2={420}
      />
      <line
        className="m-ladder__line"
        x1={40}
        x2={40}
        y1="0"
        y2={420}
      />
      <circle
        className="m-ladder__stop-circle"
        cx={-40}
        cy={0}
        r="3"
      />
      <circle
        className="m-ladder__stop-circle"
        cx={40}
        cy={0}
        r="3"
      />
      <text
        className="m-ladder__timepoint-name"
        dominantBaseline="middle"
        textAnchor="middle"
        x="0"
        y={0}
      >
        MATPN
      </text>
      <circle
        className="m-ladder__stop-circle"
        cx={-40}
        cy={210}
        r="3"
      />
      <circle
        className="m-ladder__stop-circle"
        cx={40}
        cy={210}
        r="3"
      />
      <text
        className="m-ladder__timepoint-name"
        dominantBaseline="middle"
        textAnchor="middle"
        x="0"
        y={210}
      >
        WELLH
      </text>
      <circle
        className="m-ladder__stop-circle"
        cx={-40}
        cy={420}
        r="3"
      />
      <circle
        className="m-ladder__stop-circle"
        cx={40}
        cy={420}
        r="3"
      />
      <text
        className="m-ladder__timepoint-name"
        dominantBaseline="middle"
        textAnchor="middle"
        x="0"
        y={420}
      >
        MORTN
      </text>
    </svg>
  </div>,
  <div
    className="m-incoming-box"
  />,
]
`;

exports[`routeLadder renders a route ladder with vehicles in the incoming box 1`] = `
Array [
  <div
    className="m-route-ladder__header"
  >
    <button
      className="m-close-button"
      onClick={[Function]}
    >
      <span
        className=""
        dangerouslySetInnerHTML={
          Object {
            "__html": "SVG",
          }
        }
      />
    </button>
    <div
      className="m-route-ladder__route-name"
    >
      28
    </div>
  </div>,
  <div
    className="m-route-ladder__controls"
  >
    <button
      className="m-route-ladder__reverse"
      onClick={[Function]}
    >
      <span
        className="m-route-ladder__reverse-icon"
        dangerouslySetInnerHTML={
          Object {
            "__html": "SVG",
          }
        }
      />
      Reverse
    </button>
  </div>,
  <div
    className="m-ladder"
  >
    <svg>
      0
      <g>
        <line
          className="m-ladder__scheduled-line on-time"
          x1={-63}
          x2={-40}
          y1={420}
          y2={420}
        />
      </g>
      <g>
        <g
          className="m-ladder__vehicle on-time "
          onClick={[Function]}
          transform="translate(63,105)"
        >
          <g
            className="m-vehicle-icon m-vehicle-icon--medium"
          >
            <rect
              className="m-vehicle-icon__label-background"
              height={11}
              rx={5.5}
              ry={5.5}
              width={26}
              x={-13}
              y={11.5}
            />
            <text
              className="m-vehicle-icon__label"
              dominantBaseline="central"
              textAnchor="middle"
              x="0"
              y={17}
            >
              1818
            </text>
            <path
              className="m-vehicle-icon__triangle"
              d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
              transform="scale(0.625) rotate(0) translate(-24,-22)"
            />
            <text
              className="m-vehicle-icon__variant"
              dominantBaseline="alphabetic"
              textAnchor="middle"
              x={0}
              y={8.5}
            >
              4
            </text>
          </g>
        </g>
      </g>
      <g>
        <g
          className="m-ladder__vehicle on-time "
          onClick={[Function]}
          transform="translate(-63,420)"
        >
          <g
            className="m-vehicle-icon m-vehicle-icon--medium"
          >
            <rect
              className="m-vehicle-icon__label-background"
              height={11}
              rx={5.5}
              ry={5.5}
              width={26}
              x={-13}
              y={-22.5}
            />
            <text
              className="m-vehicle-icon__label"
              dominantBaseline="central"
              textAnchor="middle"
              x="0"
              y={-17}
            >
              0479
            </text>
            <path
              className="m-vehicle-icon__triangle"
              d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
              transform="scale(0.625) rotate(180) translate(-24,-22)"
            />
          </g>
        </g>
      </g>
      <line
        className="m-ladder__line"
        x1={-40}
        x2={-40}
        y1="0"
        y2={420}
      />
      <line
        className="m-ladder__line"
        x1={40}
        x2={40}
        y1="0"
        y2={420}
      />
      <circle
        className="m-ladder__stop-circle"
        cx={-40}
        cy={0}
        r="3"
      />
      <circle
        className="m-ladder__stop-circle"
        cx={40}
        cy={0}
        r="3"
      />
      <text
        className="m-ladder__timepoint-name"
        dominantBaseline="middle"
        textAnchor="middle"
        x="0"
        y={0}
      >
        MATPN
      </text>
      <circle
        className="m-ladder__stop-circle"
        cx={-40}
        cy={210}
        r="3"
      />
      <circle
        className="m-ladder__stop-circle"
        cx={40}
        cy={210}
        r="3"
      />
      <text
        className="m-ladder__timepoint-name"
        dominantBaseline="middle"
        textAnchor="middle"
        x="0"
        y={210}
      >
        WELLH
      </text>
      <circle
        className="m-ladder__stop-circle"
        cx={-40}
        cy={420}
        r="3"
      />
      <circle
        className="m-ladder__stop-circle"
        cx={40}
        cy={420}
        r="3"
      />
      <text
        className="m-ladder__timepoint-name"
        dominantBaseline="middle"
        textAnchor="middle"
        x="0"
        y={420}
      >
        MORTN
      </text>
    </svg>
  </div>,
  <div
    className="m-incoming-box"
  />,
]
`;
